[package]
name = "zrush"
version = "0.1.0"
edition = "2021"
author = "mrwojack@proton.me"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = {version = "4.3.23", features=["cargo"] }
ethers = "2.0.9"
hex = "0.4.3"
hostname = "0.3.1"
prost = "0.11.9"
rand = "0.8.5"
serde = "1.0.186"
serde_derive = "1.0.186"
serde_json = "1.0.105"
time = "0.3.26"
tokio = { version = "1.32.0" , features = ["macros", "rt-multi-thread"]}
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false



[profile.local]
debug=0
opt-level = 1
strip = true
panic = "abort"
codegen-units = 16

